<resources>
    <string name="app_name">My Application</string>

    <string name="title">Test App</string>
    <string name="author">Yadira Lugo</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="user_admin">admin</string>
    <string name="pass_admin">admin</string>
    <string name="done">Done</string>
    <string name="title_activity_dashboard">Test App</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="web">Web</string>
    <string name="fragment">This is a fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera">Camera</string>
</resources>
