<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/lightbulbs"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="@color/blue"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="2"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:textColor="@color/blue"
        android:textSize="25dp"
        android:textStyle="italic" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/labUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@drawable/textfield_default"
            android:layout_below="@+id/labUser"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/user"
            android:text="admin" />

        <TextView
            android:id="@+id/labPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUser"
            android:text="@string/pass"
            android:textColor="@color/blue"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@drawable/textfield_default"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/password"
            android:text="admin"
            android:layout_below="@+id/labPassword" />

        <TextView
            android:id="@+id/labDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_gravity="center_vertical|right"
            android:text="@string/done"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="perform_action" />

    </LinearLayout>


</RelativeLayout>
