<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yary.myapplication.Dashboard">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray" >

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile"
            android:layout_gravity="center"
            android:id="@+id/imageView" />

        <TextView
            android:id="@+id/txtName"
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="15dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btnStart"
            android:layout_marginTop="50dp"
            android:onClick="selectFragment"
            android:background="@drawable/home"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:paddingTop="5dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/maps"
            android:id="@+id/btnFrag01"
            android:onClick="selectFragment"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:paddingTop="5dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/camera"
            android:id="@+id/btnFrag02"
            android:onClick="selectFragment"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:paddingTop="5dp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/fragment_holder"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    </LinearLayout>

</LinearLayout>
